--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 appnope==0.1.0
+astroid==2.4.2
 attrs==19.3.0
 awscli==1.18.39
 backcall==0.1.0
 bleach==3.1.4
 botocore==1.15.39
+branca==0.4.1
 certifi==2020.4.5.1
 chardet==3.0.4
 colorama==0.4.3
@@ -13,11 +15,13 @@ defusedxml==0.6.0
 docutils==0.15.2
 entrypoints==0.3
 ffmpeg==1.4
+folium==0.11.0
 idna==2.9
 imutils==0.5.3
 ipykernel==5.2.0
 ipython==7.13.0
 ipython-genutils==0.2.0
+isort==4.3.21
 jedi==0.16.0
 Jinja2==2.11.1
 jmespath==0.9.5
@@ -29,9 +33,11 @@ jupyterlab==2.1.0
 jupyterlab-server==1.1.1
 kiwisolver==1.2.0
 labelImg==1.8.3
+lazy-object-proxy==1.4.3
 lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
+mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.5
@@ -49,12 +55,16 @@ prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 pyasn1==0.4.8
 Pygments==2.6.1
+pylint==2.5.3
 pyparsing==2.4.7
+pyproj==2.6.1.post1
 PyQt5==5.14.2
 PyQt5-sip==12.7.2
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
+pywin32==228
+pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.0
 requests==2.23.0
@@ -64,9 +74,11 @@ Send2Trash==1.5.0
 six==1.14.0
 terminado==0.8.3
 testpath==0.4.4
+toml==0.10.1
 tornado==6.0.4
 tqdm==4.45.0
 traitlets==4.3.3
 urllib3==1.25.8
 wcwidth==0.1.9
 webencodings==0.5.1
+wrapt==1.12.1
